tests/snapshots/generics__extra_bound.snap
---
source: tests/generics.rs
expression: "ExtraBound::<bool>::to_mapping()"
---
properties:
  inner:
    type: boolean
