tests/snapshots/generics__extra_types.snap
---
source: tests/generics.rs
expression: "ExtraTypes::<Vec<u8>, String>::to_mapping()"
---
properties:
  inner:
    type: unsigned_long
