tests/snapshots/generics__type_bound.snap
---
source: tests/generics.rs
expression: "TypeBound::<i32>::to_mapping()"
---
properties:
  inner:
    type: integer
