tests/snapshots/generics__where_bound.snap
---
source: tests/generics.rs
expression: "WhereBound::<u32>::to_mapping()"
---
properties:
  inner:
    type: unsigned_long
